# learning_deep_learning

./: .gitignore  AGENTS.md  README.md  strategy.md
HowLLMsActuallyWork/: llm-core-architecture.html
lessons/: 0001-gradient-boosting-core-idea.html  0002-makemore-course-map.html  0003-maximum-likelihood-estimation.html
ml-zoomcamp/: env_setup.md  learning-qa.md  pyproject.toml
ml-zoomcamp/02-regression/: notebook.ipynb
ml-zoomcamp/02-regression/homework/: car_fuel_efficiency.csv  notebook.ipynb
ml-zoomcamp/03-classification/: notebook.ipynb
ml-zoomcamp/03-classification/homework/: course_lead_scoring.csv  notebook.ipynb
ml-zoomcamp/04-evaluation/: notebook.ipynb
ml-zoomcamp/04-evaluation/homework/: notebook.ipynb
ml-zoomcamp/06-trees/: notebook.ipynb
ml-zoomcamp/06-trees/homework/: notebook.ipynb
zero2hero/: learning-qa.md
zero2hero/bigram/: play.ipynb
zero2hero/micrograd/: engine.py  first_half.ipynb  nn.py  play.ipynb  second_half.ipynb
zero2hero/mlp/: play.ipynb
