[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyter",
    "matplotlib",
    "numpy<2",
    "pandas",
    "scikit-learn",
    "seaborn",
    "torch==2.2.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
